// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots React|A11y/BaseButton Default 1`] = `
<div>
  <button
    type="button"
  />
</div>
`;

exports[`Storyshots React|A11y/BaseButton Disabled 1`] = `
<div>
  <button
    disabled=""
    type="button"
  >
    Testing the a11y addon
  </button>
</div>
`;

exports[`Storyshots React|A11y/BaseButton Invalid contrast 1`] = `
<div>
  <button
    style="color: black; background-color: black;"
    type="button"
  >
    Testing the a11y addon
  </button>
</div>
`;

exports[`Storyshots React|A11y/BaseButton Label 1`] = `
<div>
  <button
    type="button"
  >
    Testing the a11y addon
  </button>
</div>
`;

exports[`Storyshots React|A11y/BaseButton delayed render 1`] = `
<div>
  <div />
</div>
`;

exports[`Storyshots React|A11y/Button Content 1`] = `
<div>
  <button
    style="padding: 12px 6px; font-size: 12px; line-height: 16px; border-radius: 5px; background-color: rgb(2, 132, 2); color: rgb(255, 255, 255);"
    type="button"
  >
    Testing the a11y addon
  </button>
</div>
`;

exports[`Storyshots React|A11y/Button Default 1`] = `
<div>
  <button
    style="padding: 12px 6px; font-size: 12px; line-height: 16px; border-radius: 5px; background-color: rgb(2, 132, 2); color: rgb(255, 255, 255);"
    type="button"
  >
    null
  </button>
</div>
`;

exports[`Storyshots React|A11y/Button Disabled 1`] = `
<div>
  <button
    disabled=""
    style="padding: 12px 6px; font-size: 12px; line-height: 16px; border-radius: 5px; background-color: rgb(2, 132, 2); color: rgb(255, 255, 255);"
    type="button"
  >
    Testing the a11y addon
  </button>
</div>
`;

exports[`Storyshots React|A11y/Button Invalid contrast 1`] = `
<div>
  <button
    style="padding: 12px 6px; font-size: 12px; line-height: 16px; border-radius: 5px; color: rgb(255, 255, 255); background-color: rgb(76, 175, 80);"
    type="button"
  >
    Testing the a11y addon
  </button>
</div>
`;

exports[`Storyshots React|A11y/Button Label 1`] = `
<div>
  <button
    style="padding: 12px 6px; font-size: 12px; line-height: 16px; border-radius: 5px; background-color: rgb(2, 132, 2); color: rgb(255, 255, 255);"
    type="button"
  >
    null
  </button>
</div>
`;

exports[`Storyshots React|A11y/Form With label 1`] = `
<div>
  <label
    class="css-crouyv"
  >
    <span
      class="css-celebo"
    >
      <span>
        Testing the a11y addon
      </span>
    </span>
    <input
      class="css-dcs8sx"
      id="1"
    />
  </label>
</div>
`;

exports[`Storyshots React|A11y/Form With placeholder 1`] = `
<div>
  <label
    class="css-crouyv"
  >
    <input
      class="css-dcs8sx"
      id="1"
      placeholder="Testing the a11y addon"
    />
  </label>
</div>
`;

exports[`Storyshots React|A11y/Form Without Label 1`] = `
<div>
  <label
    class="css-crouyv"
  >
    <input
      class="css-dcs8sx"
    />
  </label>
</div>
`;

exports[`Storyshots React|A11y/Image Presentation 1`] = `
<div>
  <img
    role="presentation"
    src="http://placehold.it/350x150"
  />
</div>
`;

exports[`Storyshots React|A11y/Image With alt 1`] = `
<div>
  <img
    alt="Testing the a11y addon"
    src="http://placehold.it/350x150"
  />
</div>
`;

exports[`Storyshots React|A11y/Image Without alt 1`] = `
<div>
  <img
    src="http://placehold.it/350x150"
  />
</div>
`;

exports[`Storyshots React|A11y/Image Without alt but unchecked 1`] = `
<div>
  <img
    src="http://placehold.it/350x150"
  />
</div>
`;

exports[`Storyshots React|A11y/Typography Correct 1`] = `
<div>
  <h1>
    Testing the a11y addon
  </h1>
  <p>
    Testing the a11y addon
  </p>
  <a
    href="javascript:void 0"
  >
    Testing the a11y addon...
  </a>
</div>
`;

exports[`Storyshots React|A11y/Typography Empty Heading 1`] = `
<div>
  <h1 />
</div>
`;

exports[`Storyshots React|A11y/Typography Empty Link 1`] = `
<div>
  <a
    href="javascript:void 0"
  />
</div>
`;

exports[`Storyshots React|A11y/Typography Empty Paragraph 1`] = `
<div>
  <p />
</div>
`;

exports[`Storyshots React|A11y/Typography Link without href 1`] = `
<div>
  <a>
    Testing the a11y addon...
  </a>
</div>
`;
